infra/kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: toffolon
  labels:
    app.kubernetes.io/name: toffolon-backend
spec:
  selector:
    app: toffolon-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
